# backend

./: .env  .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CodeValidator.md  Dockerfile  Makefile  README.md  agents.md  alembic.ini  docker-compose.yml  importlinter.ini  main.py  mypy.ini  mypy_no_bom.ini  openapi.json  pyproject.toml  pytest.ini  requirements.txt  scratch_notify_test.py
apps/backend/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  importlinter.ini  pyproject.toml  pytest.ini  requirements.txt  sitecustomize.py  tmp_importlinter.ini
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_base.py  20240620_fix_transition_node_ids.py  20240710_rename_workspaces_to_accounts.py  20240920_account_id_bigserial.py  20241002_shared_objects.py  20250210_referrals.py  (+94 more)
apps/backend/app/: main.py
apps/backend/config/: feature_flags.py
apps/backend/docs/: README.md  auth_api.md  worker-platform.md
apps/backend/evals/: README.md
apps/backend/infra/: README.md  SCHEMAS_MATRIX.md  alembic-shared.ini  ca-certificate.crt  check_asyncpg.py  docker-compose.yml  events_worker.py  notifications_worker.py  otel-collector.yaml  schedule_worker.py
apps/backend/migrations/: env.py  script.py.mako
apps/backend/scripts/: billing_e2e.py  migrate_quest_data.py  recompute_embeddings.py
apps/backend/workers/: README.md  __init__.py  __main__.py  events_worker.py  notifications_worker.py  schedule_worker.py  telemetry_worker.py
(+4494 files in other folders)
