[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "redis>=5.0",
  "fakeredis>=2.23",
  "httpx>=0.27",
  "pydantic-settings>=2.3",
  "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "app*",
  "domains*",
  "packages*",
  "workers*",
  "apps.backend*",
]
exclude = [
  "tests*",
  "infra*",
  "docs*",
  "var*",
  "evals*",
  ".venv*",
  "scripts*",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["apps/backend/domains"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "apps/backend/templates",
  "apps/backend/domains/platform/_template",
]

[tool.ruff.lint]
select = ["E","F","W","I","UP","B","A"]
ignore = ["E501","E402","B008"]
extend-ignore = ["UP038","B017"]

[tool.mypy]
mypy_path = ["."]
python_version = "3.11"
strict = true
explicit_package_bases = true
namespace_packages = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
exclude = [
  ".venv",
  "apps/backend/templates/",
  "apps/backend/domains/platform/_template/",
]


[[tool.mypy.overrides]]
module = [
    "packages.worker.*",
    "domains.platform.notifications.workers.*",
    "domains.platform.telemetry.workers.*",
]
ignore_missing_imports = true
